--- a/src/components/ProductPreview/index.css
+++ b/src/components/ProductPreview/index.css
@@ -38,17 +38,17 @@ div.largeImage {
   color: #ffffff !important;
 }
 
-a:link {
+a.product-link:link {
   text-decoration: none !important;
   color: black !important;
 }
 
-a:visited {
+a.product-link:visited {
   text-decoration: none !important;
   color: black !important;
 }
 
-a:hover {
+a.product-link:hover {
   text-decoration: none !important;
   color: rgb(56, 25, 0) !important;
 }
