--- a/src/components/ProductInfo/index.css
+++ b/src/components/ProductInfo/index.css
@@ -37,3 +37,8 @@
     background-color: #ff7b00f7 !important;
     color: #ffffff !important;
   }
+
+  h2.comment-title {
+    font-size: 2rem !important;
+    font-weight: bold;
+  }
